--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,11 @@ title: Haneul Lee
 position: Ph.D. Student
 affiliation: University of California, Davis
 affiliation_link: https://cs.ucdavis.edu/
-# 유통이랑 자오슈 블로그 참고하기
-# 심플하게 합시다
 email: hnee at ucdavis dot edu
 email_link: mailto:hnee@ucdavis.edu
 
 school_logo: ./assets/img/ucdavis.png
-
+# 사이트 섬네일 어떻게 바꾸지?
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
