--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Basic Information 
+site_title: Haneul Lee's Homepage
 title: Haneul Lee
 position: Ph.D. Student
 affiliation: University of California, Davis
